Fix spacing issues for Hero and Info sections

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #F9FAF8;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,7 +27,7 @@ ul {
 }
 
 a {
-    text-decoration: none;width: 8;
+    text-decoration: none;
 }
 /* shared */
 
@@ -39,7 +38,7 @@ a {
     color: #1F2937;
 }
 
-.hero,
+.hero-background,
 .footer {
     background-color: #1F2937;
 }
@@ -58,16 +57,16 @@ a {
     justify-content: space-between;
     flex: 1;
     padding: 16px;
+    margin: 0 350px;
+    gap: 72px;
     
 }
 
 .header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    
-    
-    
+    /* margin-bottom: 16px; */
 }
 
 .hero-logo {
@@ -77,7 +76,8 @@ a {
 
 .hero-content {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    margin-bottom: 32px;
     
 }
 
@@ -86,7 +86,7 @@ a {
     flex-direction: column;
     justify-content: center;
     width: 400px;
-    gap: 8px;
+    gap: 16px;
 }
 
 .hero-main-text {
@@ -96,7 +96,7 @@ a {
 }
 
 .hero-image {
-    width: 400px;
+    width: 500px;
     height: auto;
 }
 
@@ -108,6 +108,8 @@ a {
     justify-content: center;
     align-items: center;
     flex: 1;
+    margin: 72px 0;
+    gap: 32px;
 }
 
 .info-header {
@@ -123,6 +125,7 @@ a {
 
 .info-container {
     display: flex;
+    gap: 32px;
 }
 
 .info-item {
